Optimising the writing and reading of JSON